--- a/docs/GDPs/gdp-0000.rst
+++ b/docs/GDPs/gdp-0000.rst
@@ -115,7 +115,7 @@ into the main source code repository, the status will be changed to ``Final``.
 
 To allow gathering of additional design and interface feedback before
 committing to long term stability for a new feature or API, a GDP may
-also be marked as ``Provisional`` This is short for "Provisionally Accepted",
+also be marked as ``Provisional``. This is short for "Provisionally Accepted",
 and indicates that the proposal has been accepted for inclusion in the GT4Py
 implementation, but additional user feedback is needed before the full
 design can be considered "Final". Unlike regular accepted GDPs, provisionally
